--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -15,23 +15,22 @@ spec:
         app: frontend
     spec:
       containers:
-      - name: frontend-container
-        image: shubhamdevops/frontend-app:latest
-        env:
-        - name: REACT_APP_BACKEND_URL
-          value: http://backend-svc:8080
-        ports:
-        - containerPort: 3000
+        - name: frontend-container
+          image: shubhamdevops/frontend-app:latest
+          env:
+            - name: REACT_APP_BACKEND_URL
+              value: http://backend-svc:8080
+          ports:
+            - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend-svc
 spec:
-  type: NodePort              # expose on node port
+  type: LoadBalancer
   selector:
     app: frontend
   ports:
-    - port: 3000              # ClusterIP port
-      targetPort: 3000        # Pod port
-      nodePort: 30300         # NodePort range 30000–32767
+    - port: 80           # External load balancer port
+      targetPort: 3000   # Container port
