--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -12,7 +12,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres-deployment
+  name: postgres
   labels:
     app: postgres
 spec:
@@ -38,22 +38,21 @@ spec:
         ports:
         - containerPort: 5432
         volumeMounts:
-        - name: postgres-storage
+        - name: data
           mountPath: /var/lib/postgresql/data
       volumes:
-      - name: postgres-storage
+      - name: data
         persistentVolumeClaim:
           claimName: postgres-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-svc
+  name: postgres     # matches DB_HOST=postgres in your .env
 spec:
-  type: NodePort              # expose on node port (if you need external DB access)
+  type: ClusterIP
   selector:
     app: postgres
   ports:
-    - port: 5432              # ClusterIP port
-      targetPort: 5432        # Pod port
-      nodePort: 30090         # NodePort range 30000–32767
+    - port: 5432
+      targetPort: 5432
