--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -1,14 +1,3 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -38,17 +27,16 @@ spec:
         ports:
         - containerPort: 5432
         volumeMounts:
-        - name: data
+        - name: pgdata
           mountPath: /var/lib/postgresql/data
       volumes:
-      - name: data
-        persistentVolumeClaim:
-          claimName: postgres-pvc
+      - name: pgdata
+        emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres     # matches DB_HOST=postgres in your .env
+  name: postgres       # matches DB_HOST=postgres
 spec:
   type: ClusterIP
   selector:
