--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -29,7 +29,7 @@ spec:
         - name: DB_NAME
           value: employees
         - name: ALLOWED_ORIGINS
-          value: "http://localhost:3000"
+          value: "*"
         ports:
         - containerPort: 8080
 ---
