--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         image: shubhamdevops/frontend-app:latest
         env:
         - name: REACT_APP_SERVER_URL
-          value: http://backend-svc:8080
+          value: http://a82239a54554e4e1fbf42d4e100b2757-2005666866.us-east-1.elb.amazonaws.com:8080
         ports:
         - containerPort: 3000
 ---
