--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 
-REACT_APP_SERVER_URL=http://a82239a54554e4e1fbf42d4e100b2757-2005666866.us-east-1.elb.amazonaws.com:8080
+REACT_APP_SERVER_URL=/api
