--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -1,3 +1,4 @@
+# backend-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,32 +16,52 @@ spec:
         app: backend
     spec:
       containers:
-      - name: backend
-        image: shubhamdevops/backend-app:latest
-        env:
-        - name: DB_HOST
-          value: postgres           # from .env
-        - name: DB_PORT
-          value: "5432"
-        - name: DB_USER
-          value: admin
-        - name: DB_PASSWORD
-          value: adminpass
-        - name: DB_NAME
-          value: employees
-        - name: ALLOWED_ORIGINS
-          value: "*"
-        ports:
-        - containerPort: 8080
+        - name: backend
+          image: shubhamdevops/backend-app:latest
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
+          env:
+            - name: DB_HOST
+              value: postgres
+            - name: DB_PORT
+              value: "5432"
+            - name: DB_USER
+              value: admin
+            - name: DB_PASSWORD
+              value: adminpass
+            - name: DB_NAME
+              value: employees
+            - name: ALLOWED_ORIGINS
+              value: "*"
+          readinessProbe:
+            tcpSocket:
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            failureThreshold: 3
+          livenessProbe:
+            tcpSocket:
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 20
+            failureThreshold: 5
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu:    "250m"
+            limits:
+              memory: "512Mi"
+              cpu:    "500m"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: backend-svc
 spec:
-  type: ClusterIP
   selector:
     app: backend
   ports:
     - port: 8080
       targetPort: 8080
+  type: ClusterIP
