--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -1,3 +1,15 @@
+# postgres-deployment.yaml
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,32 +27,51 @@ spec:
         app: postgres
     spec:
       containers:
-      - name: postgres
-        image: postgres:13-alpine
-        env:
-        - name: POSTGRES_USER
-          value: admin
-        - name: POSTGRES_PASSWORD
-          value: adminpass
-        - name: POSTGRES_DB
-          value: employees
-        ports:
-        - containerPort: 5432
-        volumeMounts:
-        - name: pgdata
-          mountPath: /var/lib/postgresql/data
+        - name: postgres
+          image: postgres:13-alpine
+          ports:
+            - containerPort: 5432
+          env:
+            - name: POSTGRES_USER
+              value: admin
+            - name: POSTGRES_PASSWORD
+              value: adminpass
+            - name: POSTGRES_DB
+              value: employees
+          volumeMounts:
+            - name: pgdata
+              mountPath: /var/lib/postgresql/data
+          readinessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - pg_isready -U admin
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 6
+          livenessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - pg_isready -U admin
+            initialDelaySeconds: 30
+            periodSeconds: 20
+            failureThreshold: 6
       volumes:
-      - name: pgdata
-        emptyDir: {}
+        - name: pgdata
+          persistentVolumeClaim:
+            claimName: postgres-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres       # matches DB_HOST=postgres
+  name: postgres
 spec:
-  type: ClusterIP
   selector:
     app: postgres
   ports:
     - port: 5432
       targetPort: 5432
+  type: ClusterIP
