--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -1,15 +1,3 @@
-# postgres-deployment.yaml
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -38,9 +26,7 @@ spec:
               value: adminpass
             - name: POSTGRES_DB
               value: employees
-          volumeMounts:
-            - name: pgdata
-              mountPath: /var/lib/postgresql/data
+          # Removed volumeMounts section as no persistent volume is needed now
           readinessProbe:
             exec:
               command:
@@ -59,10 +45,6 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 20
             failureThreshold: 6
-      volumes:
-        - name: pgdata
-          persistentVolumeClaim:
-            claimName: postgres-pvc
 ---
 apiVersion: v1
 kind: Service
