--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -18,23 +18,24 @@ spec:
       containers:
         - name: react-frontend
           image: shubhamdevops/frontend-app:latest
+          imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 80
+            - containerPort: 3000
           env:
-            - name: REACT_APP_API_URL
-              value: "/api"
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 15
-            periodSeconds: 20
+            - name: REACT_APP_SERVER_URL
+              value: "/employees"
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 80
+          #   initialDelaySeconds: 5
+          #   periodSeconds: 10
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 80
+          #   initialDelaySeconds: 15
+          #   periodSeconds: 20
 ---
 apiVersion: v1
 kind: Service
@@ -44,6 +45,6 @@ spec:
   selector:
     app: react-frontend
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 3000
+      targetPort: 3000
   type: ClusterIP
