--- a/postgres-deployment.yaml
+++ b/postgres-deployment.yaml
@@ -26,25 +26,18 @@ spec:
               value: adminpass
             - name: POSTGRES_DB
               value: employees
-          # Removed volumeMounts section as no persistent volume is needed now
+          # Simplified probes
           readinessProbe:
             exec:
-              command:
-                - sh
-                - -c
-                - pg_isready -U admin
-            initialDelaySeconds: 10
+              command: ["pg_isready", "-U", "admin"]
+            initialDelaySeconds: 20  # Increased from 10
             periodSeconds: 10
-            failureThreshold: 6
           livenessProbe:
             exec:
-              command:
-                - sh
-                - -c
-                - pg_isready -U admin
-            initialDelaySeconds: 30
+              command: ["pg_isready", "-U", "admin"]
+            initialDelaySeconds: 40  # Increased from 30
             periodSeconds: 20
-            failureThreshold: 6
+
 ---
 apiVersion: v1
 kind: Service
