--- a/alb-ingress.yaml
+++ b/alb-ingress.yaml
@@ -3,12 +3,13 @@ kind: Ingress
 metadata:
   name: app-ingress
   annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-    alb.ingress.kubernetes.io/healthcheck-path: /healthz
+    # NGINX-specific annotations
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"  # For WebSocket
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"  # For WebSocket
+    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"   # For WebSocket
 spec:
+  ingressClassName: nginx  # Mandatory for NGINX
   rules:
     - http:
         paths:
