reduced docker image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Golang image as the base image
-FROM golang:1.19
+FROM golang:1.19 AS build
 
 # Set the Current Working Directory inside the container
 WORKDIR /app
@@ -16,9 +16,13 @@ COPY . .
 # Build the Go app
 #RUN go mod tidy && go mod vendor
 
-RUN go build -o main .
-
+RUN CGO_ENABLED=0 GOOS=linux go build -o myapp .
+#RUN go build -o main .
+FROM gcr.io/distroless/base-debian11 AS build-release-stage
+WORKDIR /app
+COPY --from=build /app/myapp .
 # Expose port 8080
+
 EXPOSE 8080
 
 # Command to run the executable
